--- a/style.css
+++ b/style.css
@@ -1,21 +1,75 @@
-/* You're welcome to change any of this! */
-* {
-    box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@700&display=swap');
 
 body {
-    margin: 0px;
-    font-family: Arial, sans-serif;
+  background-color: #383B7A;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: -.003em;
+  font-size: 16px;
+  padding: 70px;
 }
-header, section {
-    padding: 20px;
+
+h1 {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 44px;
+  line-height: 0.5;
+  letter-spacing: +0.25em;
+  color: rgba(255, 255, 255);
 }
-p, li {
-    line-height: 1.5em;
+
+#tutorials {
+  background-color: #FFF2DE;
+  padding-top: 30px;
+  padding-bottom: 40px;
+  padding-right: 40px;
+  padding-left: 40px;
+}
+
+#homework {
+  background-color: #FFEDF0;
+  padding-top: 30px;
+  padding-bottom: 40px;
+  padding-right: 40px;
+  padding-left: 40px;
 }
 
 #inspiration {
-    background-color: #F0F0F0;
-    padding-top: 40px;
+    background-color: #EDEBF2;
+    padding-top: 30px;
     padding-bottom: 40px;
+    padding-right: 40px;
+    padding-left: 40px;
+}
+.page-section {
+  box-sizing: border-box;    
+  border: dotted 1px #CCC;    
+  padding: 10px;           
+  margin: 10px;        
+  width: 50vh;               
+}
+
+svg {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  font-size: inherit;
+  color: inherit;
+  vertical-align: -0.125em;
+  fill: currentColor;
+}
+
+.h2 {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-weight: 600;
+  font-style: italic;
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 16px;
+  line-height: 3em;
+  letter-spacing: 0.05em;
 }
