--- a/tutorials/tutorial04/style.css
+++ b/tutorials/tutorial04/style.css
@@ -1,12 +1,95 @@
-.container {
-   display: grid;
-/* grid-template-columns: ???;
-   grid-template-rows: ???;
-   grid-template-areas: ???; 
-*/
-   min-height: 100vh;
+body * {
+   width: 100%;
+   box-sizing: border-box;
+   font-family: 'Arial';
 }
 
-@media (max-width: 1024px) {
-   /* tablet layout here */
+body {
+   margin: 2em;
+}
+
+.container {
+   color: white;
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr 1fr;
+   grid-template-rows: 1fr 0.1fr 5fr 5fr;
+   grid-template-areas:
+      "a . b b"
+      ". . . ."
+      "c d e f"
+      "g g g f";
+   min-height: 100vh;
+   grid-gap: 40px 20px;
+}
+
+article, aside, section {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border: solid 1px #000;
+}
+
+main {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border: solid 1px #000;
+}
+
+.menu1 {
+   grid-area: a;
+   background: #de0a7e;
+}
+
+.menu2 {
+   grid-area: b;
+   background: yellow;
+   color: #444;
+}
+
+article {  background: #00a4cf; }
+.card1 { grid-area: c; }
+.card2 { grid-area: d; }
+.card3 { grid-area: e; }
+
+main { 
+   grid-area: g;
+   background: #00a4cf;
+}
+aside { 
+   grid-area: f;
+   background: #36353a;
+}
+
+/* tablet: ipad air*/
+@media (max-width: 820px) {
+   .container {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1.5fr 2fr 5fr 5fr 5fr;
+      grid-template-areas:
+         "a b"
+         "f f"
+         "c d"
+         "e e"
+         "g g";
+      grid-gap: 20px 20px;
+   }
+}
+
+/* phone: iphone 12 pro */
+@media (max-width: 390px) {
+
+   .container {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1.5fr 2fr 5fr 5fr 5fr 5fr 5fr;
+      grid-template-areas:
+         "a ."
+         "b b"
+         "c c"
+         "d d"
+         "e e"
+         "g g"
+         "f f";
+      grid-gap: 15px;
+   }
 }
